projects/vb6parse/snapshots/syntax/library/statements/sendkeys/sendkeys_with_wait_variable.snap
---
source: projects/vb6parse/src/syntax/library/statements/system_interaction/sendkeys.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SendKeysStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SendKeysKeyword
                  text: SendKeys
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Text\""
                    - kind: Comma
                      text: ","
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: IdentifierExpression
                          children:
                            - kind: Identifier
                              text: waitFlag
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
